--- a/project/package.json
+++ b/project/package.json
@@ -7,15 +7,16 @@
     "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
-    "express": "3.4.8",
-    "jade": "*",
-    "express-load": "~1.1.9",
-    "mongoose-timestamp": "~0.2.0",
-    "mongoose": "~3.8.8",
-    "passport": "^0.2.0",
     "connect-mongo": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "crypto": "0.0.3"
+    "cors": "^2.3.0",
+    "crypto": "0.0.3",
+    "express": "3.4.8",
+    "express-load": "~1.1.9",
+    "jade": "*",
+    "mongoose": "~3.8.8",
+    "mongoose-timestamp": "~0.2.0",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
