--- a/project/package.json
+++ b/project/package.json
@@ -11,8 +11,10 @@
     "cors": "^2.3.0",
     "crypto": "0.0.3",
     "express": "3.4.8",
+    "express-jwt": "^0.2.1",
     "express-load": "~1.1.9",
     "jade": "*",
+    "jsonwebtoken": "^0.4.0",
     "mongoose": "~3.8.8",
     "mongoose-timestamp": "~0.2.0",
     "passport": "^0.2.0",
